fix(Dialogs): Replace `translate3d` properties with `translate` to fix blurriness due to pixel round

--- a/rocketbelt/components/dialogs/_dialog-base.scss
+++ b/rocketbelt/components/dialogs/_dialog-base.scss
@@ -103,7 +103,7 @@ $dialog-close-height: 44px;
   max-height: 90%;
   border-radius: 2px;
   background-color: color(white);
-  transform: translate3d(-50%, -50%, 0);
+  transform: translate(-50%, -50%);
   display: flex;
   flex-flow: column;
   overflow: hidden;
@@ -127,24 +127,24 @@ $dialog-close-height: 44px;
 @keyframes dialogIn {
   from {
     opacity: 0;
-    transform: translate3d(-50%, -70%, 0);
+    transform: translate(-50%, -70%);
   }
 
   to {
     opacity: 1;
-    transform: translate3d(-50%, -50%, 0);
+    transform: translate(-50%, -50%);
   }
 }
 
 @keyframes dialogOut {
   from {
     opacity: 1;
-    transform: translate3d(-50%, -50%, 0);
+    transform: translate(-50%, -50%);
   }
 
   to {
     opacity: 0;
-    transform: translate3d(-50%, 0%, 0);
+    transform: translate(-50%, 0%);
   }
 }
 
@@ -165,6 +165,6 @@ $dialog-close-height: 44px;
   }
 }
 
-.dialog_required .dialog_close { 
-  display: none; 
+.dialog_required .dialog_close {
+  display: none;
 }
